--- a/package.json
+++ b/package.json
@@ -2,16 +2,28 @@
   "name": "kidsnote",
   "version": "1.0.0",
   "description": "Todo Vanilla/MVC",
+  "keywords": [
+    "mornya",
+    "vanilla",
+    "mvc",
+    "demo",
+    "front-end"
+  ],
+  "homepage": "https://mornya.github.io/todo-vanilla-mvc",
+  "license": "MIT",
   "author": "mornya <mornya78@gmail.com>",
-  "repository": "",
-  "main": "./dist/index.js",
+  "private": true,
+  "repository": "https://github.com/mornya/todo-vanilla-mvc",
+  "bugs": "https://github.com/mornya/todo-vanilla-mvc/issues",
+  "main": "./build/index.js",
   "types": "./types",
   "scripts": {
     "postinstall": "lintest install || exit 0",
     "postuninstall": "lintest install || exit 0",
     "build": "ts-node --files --pretty --project ./tsconfig-cli.json ./build.ts",
+    "deploy": "npm run build && echo 'Wait...' && gh-pages -d build",
     "start": "nodemon --verbose",
-    "check": "tsc -p tsconfig.json --noEmit --pretty",
+    "check": "lintest check",
     "lint": "lintest lint",
     "lint:fix": "lintest lint --fix",
     "test": "lintest test",
@@ -23,41 +35,41 @@
     "npm": ">=6"
   },
   "dependencies": {
-    "nodemon": "^2.0.12",
-    "ts-node": "^10.2.1",
+    "nodemon": "^2.0.14",
+    "ts-node": "^10.3.0",
     "tsconfig-paths": "^3.11.0"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^8.0.1",
     "@types/cssnano": "^4.0.1",
     "@types/fibers": "^3.1.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.9.1",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.1",
     "@types/postcss-flexbugs-fixes": "^4.2.1",
-    "@types/webpack-dev-server": "^4.1.0",
-    "@types/webpack-env": "^1.16.2",
-    "autoprefixer": "^10.3.4",
+    "@types/webpack-dev-server": "^4.3.1",
+    "@types/webpack-env": "^1.16.3",
+    "autoprefixer": "^10.3.7",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
+    "css-loader": "^6.4.0",
     "cssnano": "^5.0.8",
     "eslint": "^7.32.0",
     "fibers": "^5.0.0",
-    "fork-ts-checker-webpack-plugin": "^6.3.3",
-    "html-webpack-plugin": "^5.3.2",
+    "fork-ts-checker-webpack-plugin": "^6.4.0",
+    "html-webpack-plugin": "^5.4.0",
     "node-sass": "^5.0.0",
-    "postcss": "^8.3.6",
+    "postcss": "^8.3.10",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^6.1.1",
-    "prettier": "^2.3.2",
+    "postcss-loader": "^6.2.0",
+    "prettier": "^2.4.1",
     "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.4.3",
-    "webpack": "^5.52.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.1"
+    "sass-loader": "^12.2.0",
+    "style-loader": "^3.3.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.59.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
   },
   "optionalDependencies": {
     "fsevents": "^2.3.2"
